--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,11 @@
 [jobtask]
 llm_server = 'http://127.0.0.1:9527/api'
-start_flag = "干活了"
+job_api = 'http://127.0.0.1:8081/api/jobs/wechat?orderBy=id&orderDir=desc&page=1&perPage=100'
 end_flag = "任务取消"
 confirm_flag = "确认"
+nlp_similar_cn_model = '/data/text2vec-base-chinese'
+nlp_similar_score = 0.85
+
 
 [llm]
 enable_local = 1
